fix dropdown options

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,10 @@
       <div class="col-3">
         <select class="form-select" aria-label="">
           <option selected value=""></option>
-          <option value="discord">Discord</option>
-          <option value="vod">Vod</option>
+          <option value="classNum">Class#</option>
           <option value="checkin">Check in</option>
+          <option value="title">Title</option>
+          <option value="vod">Vod</option>
           <option value="slides">Slides</option>
           <option value="homework">Homework</option>
           <option value="extra">Extra</option>
